// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OAuth2SessionDetail> > renders a finished session details 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-10"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.3 17.3-4.6-4.6a.877.877 0 0 1-.213-.325A1.106 1.106 0 0 1 8.425 12c0-.133.02-.258.062-.375A.878.878 0 0 1 8.7 11.3l4.6-4.6a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L10.8 12l3.9 3.9a.949.949 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.948.948 0 0 1-.7-.275Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        Element: Unknown device
      </h3>
    </header>
    <section
      class="flex flex-col gap-6"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102"
      >
        Device details
        <div
          class="_separator_144s5_17"
          data-kind="section"
          data-orientation="horizontal"
          role="separator"
        />
      </h4>
      <ul
        class="flex flex-wrap gap-x-10 gap-y-6"
      >
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Last Active
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Signed in
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Finished
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <time
              datetime="2023-07-29T03:35:17Z"
            >
              Sat, 29 Jul 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Device ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            abcd1234
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            IP Address
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
      </ul>
      <li
        class="flex flex-col min-w-0"
      >
        <h5
          class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
        >
          Scopes
        </h5>
        <ul
          class="_visual-list_4dcf8_17 mt-1"
        >
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
              />
              <path
                d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
              />
              <path
                d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
              />
            </svg>
            See your profile info and contact details
          </li>
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.5 21.25 1.45-4.95a10.232 10.232 0 0 1-.712-2.1A10.167 10.167 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.737 9.737 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.737 9.737 0 0 1 12 22c-.75 0-1.483-.08-2.2-.238a10.23 10.23 0 0 1-2.1-.712L2.75 22.5a.936.936 0 0 1-1-.25.936.936 0 0 1-.25-1Zm2.45-1.2 3.2-.95a.949.949 0 0 1 .275-.063c.1-.008.192-.012.275-.012.15 0 .296.013.438.038.141.024.279.07.412.137a7.435 7.435 0 0 0 1.675.6c.583.133 1.175.2 1.775.2 2.233 0 4.125-.775 5.675-2.325C19.225 16.125 20 14.233 20 12c0-2.233-.775-4.125-2.325-5.675C16.125 4.775 14.233 4 12 4c-2.233 0-4.125.775-5.675 2.325C4.775 7.875 4 9.767 4 12c0 .6.067 1.192.2 1.775s.333 1.142.6 1.675c.117.217.18.446.188.688a2.29 2.29 0 0 1-.088.712l-.95 3.2Z"
              />
            </svg>
            View your existing messages and data
          </li>
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m5.07 20.965 16.141-8.07a1 1 0 0 0 0-1.79l-16.14-8.07c-.785-.392-1.658.343-1.406 1.182l2.249 7.496a1 1 0 0 1 0 .575l-2.249 7.495c-.252.84.621 1.574 1.405 1.182ZM6.246 5.86 18.528 12 6.246 18.141l1.542-5.14h4.462a1 1 0 1 0 0-2H7.788L6.246 5.858Z"
                fill-rule="evenodd"
              />
            </svg>
            Send new messages on your behalf
          </li>
        </ul>
      </li>
    </section>
    <section
      class="flex flex-col gap-6"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102"
      >
        Client info
        <div
          class="_separator_144s5_17"
          data-kind="section"
          data-orientation="horizontal"
          role="separator"
        />
      </h4>
      <ul
        class="flex flex-wrap gap-x-10 gap-y-6"
      >
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Name
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            Element
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Client ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <code>
              test-client-id
            </code>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Uri
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <a
              href="https://element.io"
              rel="noreferrer"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`<OAuth2SessionDetail> > renders session details 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-10"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.3 17.3-4.6-4.6a.877.877 0 0 1-.213-.325A1.106 1.106 0 0 1 8.425 12c0-.133.02-.258.062-.375A.878.878 0 0 1 8.7 11.3l4.6-4.6a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L10.8 12l3.9 3.9a.949.949 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.948.948 0 0 1-.7-.275Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        Element: Unknown device
      </h3>
    </header>
    <section
      class="flex flex-col gap-6"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102"
      >
        Device details
        <div
          class="_separator_144s5_17"
          data-kind="section"
          data-orientation="horizontal"
          role="separator"
        />
      </h4>
      <ul
        class="flex flex-wrap gap-x-10 gap-y-6"
      >
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Last Active
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Signed in
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Device ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            abcd1234
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            IP Address
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
      </ul>
      <li
        class="flex flex-col min-w-0"
      >
        <h5
          class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
        >
          Scopes
        </h5>
        <ul
          class="_visual-list_4dcf8_17 mt-1"
        >
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
              />
              <path
                d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
              />
              <path
                d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
              />
            </svg>
            See your profile info and contact details
          </li>
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.5 21.25 1.45-4.95a10.232 10.232 0 0 1-.712-2.1A10.167 10.167 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.737 9.737 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.737 9.737 0 0 1 12 22c-.75 0-1.483-.08-2.2-.238a10.23 10.23 0 0 1-2.1-.712L2.75 22.5a.936.936 0 0 1-1-.25.936.936 0 0 1-.25-1Zm2.45-1.2 3.2-.95a.949.949 0 0 1 .275-.063c.1-.008.192-.012.275-.012.15 0 .296.013.438.038.141.024.279.07.412.137a7.435 7.435 0 0 0 1.675.6c.583.133 1.175.2 1.775.2 2.233 0 4.125-.775 5.675-2.325C19.225 16.125 20 14.233 20 12c0-2.233-.775-4.125-2.325-5.675C16.125 4.775 14.233 4 12 4c-2.233 0-4.125.775-5.675 2.325C4.775 7.875 4 9.767 4 12c0 .6.067 1.192.2 1.775s.333 1.142.6 1.675c.117.217.18.446.188.688a2.29 2.29 0 0 1-.088.712l-.95 3.2Z"
              />
            </svg>
            View your existing messages and data
          </li>
          <li
            class="_visual-list-item_bqeu7_17"
          >
            <svg
              aria-hidden="true"
              class="_visual-list-item-icon_bqeu7_26"
              fill="currentColor"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m5.07 20.965 16.141-8.07a1 1 0 0 0 0-1.79l-16.14-8.07c-.785-.392-1.658.343-1.406 1.182l2.249 7.496a1 1 0 0 1 0 .575l-2.249 7.495c-.252.84.621 1.574 1.405 1.182ZM6.246 5.86 18.528 12 6.246 18.141l1.542-5.14h4.462a1 1 0 1 0 0-2H7.788L6.246 5.858Z"
                fill-rule="evenodd"
              />
            </svg>
            Send new messages on your behalf
          </li>
        </ul>
      </li>
    </section>
    <section
      class="flex flex-col gap-6"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102"
      >
        Client info
        <div
          class="_separator_144s5_17"
          data-kind="section"
          data-orientation="horizontal"
          role="separator"
        />
      </h4>
      <ul
        class="flex flex-wrap gap-x-10 gap-y-6"
      >
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Name
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            Element
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Client ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <code>
              test-client-id
            </code>
          </p>
        </li>
        <li
          class="flex flex-col min-w-0"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 text-secondary"
          >
            Uri
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 text-ellipsis overflow-hidden"
          >
            <a
              href="https://element.io"
              rel="noreferrer"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </section>
    <button
      aria-controls="radix-:r0:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_i91xf_17 _has-icon_i91xf_66 _destructive_i91xf_116"
      data-kind="secondary"
      data-size="lg"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 21c-.55 0-1.02-.196-1.412-.587A1.926 1.926 0 0 1 5 19V6a.968.968 0 0 1-.713-.287A.968.968 0 0 1 4 5c0-.283.096-.52.287-.713A.968.968 0 0 1 5 4h4a.97.97 0 0 1 .287-.712A.968.968 0 0 1 10 3h4a.97.97 0 0 1 .713.288A.968.968 0 0 1 15 4h4a.97.97 0 0 1 .712.287c.192.192.288.43.288.713s-.096.52-.288.713A.968.968 0 0 1 19 6v13c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 17 21H7ZM7 6v13h10V6H7Zm2 10c0 .283.096.52.287.712.192.192.43.288.713.288s.52-.096.713-.288A.968.968 0 0 0 11 16V9a.967.967 0 0 0-.287-.713A.968.968 0 0 0 10 8a.968.968 0 0 0-.713.287A.968.968 0 0 0 9 9v7Zm4 0c0 .283.096.52.287.712.192.192.43.288.713.288s.52-.096.713-.288A.968.968 0 0 0 15 16V9a.967.967 0 0 0-.287-.713A.968.968 0 0 0 14 8a.968.968 0 0 0-.713.287A.967.967 0 0 0 13 9v7Z"
        />
      </svg>
      Remove device
    </button>
  </div>
</DocumentFragment>
`;
